starting to create skeleton page

--- a/index.html
+++ b/index.html
@@ -20,7 +20,11 @@
     .navbar-inverse {
 		background-color: #2d1152;
 		height: 24px;
+		
 	}
+	.navbar-inverse .navbar-nav>li>a {
+  color: #fff;
+}
     </style>
   </head>
   <body>
@@ -41,6 +45,62 @@
         </div><!--/.nav-collapse -->
       </div>
     </nav>
+    <div class="container-fluid">
+    	<div class="col-sm-3">
+        <ul id="navlist" class="navlist Fw-200 Pstart-1">
+                <li class="Mb-6 Fz-m Ff-b" id="yui_3_16_0_1_1427842866505_806">
+                    <a href="/" class="selected Fw-b" data-ylk="itc:0;tar:news.yahoo.com;ct:naventry;rspns:nav;t1:a2;t2:lnav;t3:st;t4:m-1;sec:lnav;elm:itm;elmt:cat;cpos:1;" data-action-outcome="navigate" data-rapid_p="1" id="yui_3_16_0_1_1427842866505_805">News Home</a>
+                </li>
+                <li class="Mb-6 Fz-m Ff-b">
+                    <a href="/us/" data-ylk="itc:0;tar:news.yahoo.com;ct:naventry;rspns:nav;t1:a2;t2:lnav;t3:st;t4:m-1;sec:lnav;elm:itm;elmt:cat;cpos:2;" data-action-outcome="navigate" data-rapid_p="2">U.S.</a>
+                </li>
+                <li class="Mb-6 Fz-m Ff-b">
+                    <a href="/world/" data-ylk="itc:0;tar:news.yahoo.com;ct:naventry;rspns:nav;t1:a2;t2:lnav;t3:st;t4:m-1;sec:lnav;elm:itm;elmt:cat;cpos:3;" data-action-outcome="navigate" data-rapid_p="3">World</a>
+                </li>
+                <li class="Mb-6 Fz-m Ff-b">
+                    <a href="/politics/" data-ylk="itc:0;tar:news.yahoo.com;ct:naventry;rspns:nav;t1:a2;t2:lnav;t3:st;t4:m-1;sec:lnav;elm:itm;elmt:cat;cpos:4;" data-action-outcome="navigate" data-rapid_p="4">Politics</a>
+                </li>
+                <li class="Mb-6 Fz-m Ff-b">
+                    <a href="http://www.yahoo.com/tech/" data-ylk="itc:0;tar:news.yahoo.com;ct:naventry;rspns:nav;t1:a2;t2:lnav;t3:st;t4:m-1;sec:lnav;elm:itm;elmt:cat;cpos:5;" data-action-outcome="navigate" data-rapid_p="5">Tech</a>
+                </li>
+                <li class="Mb-6 Fz-m Ff-b">
+                    <a href="/science/" data-ylk="itc:0;tar:news.yahoo.com;ct:naventry;rspns:nav;t1:a2;t2:lnav;t3:st;t4:m-1;sec:lnav;elm:itm;elmt:cat;cpos:6;" data-action-outcome="navigate" data-rapid_p="6">Science</a>
+                </li>
+                <li class="Mb-6 Fz-m Ff-b">
+                    <a href="/health/" data-ylk="itc:0;tar:news.yahoo.com;ct:naventry;rspns:nav;t1:a2;t2:lnav;t3:st;t4:m-1;sec:lnav;elm:itm;elmt:cat;cpos:7;" data-action-outcome="navigate" data-rapid_p="7">Health</a>
+                </li>
+                <li class="Mb-6 Fz-m Ff-b">
+                    <a href="/odd-news/" data-ylk="itc:0;tar:news.yahoo.com;ct:naventry;rspns:nav;t1:a2;t2:lnav;t3:st;t4:m-1;sec:lnav;elm:itm;elmt:cat;cpos:8;" data-action-outcome="navigate" data-rapid_p="8">Odd News</a>
+                </li>
+                <li class="Mb-6 Fz-m Ff-b">
+                    <a href="/local/" data-ylk="itc:0;tar:news.yahoo.com;ct:naventry;rspns:nav;t1:a2;t2:lnav;t3:st;t4:m-1;sec:lnav;elm:itm;elmt:cat;cpos:9;" data-action-outcome="navigate" data-rapid_p="9">Local</a>
+                </li>
+                <li class="Mb-6 Fz-m Ff-b">
+                    <a href="/dear-abby/" data-ylk="itc:0;tar:news.yahoo.com;ct:naventry;rspns:nav;t1:a2;t2:lnav;t3:st;t4:m-1;sec:lnav;elm:itm;elmt:cat;cpos:10;" data-action-outcome="navigate" data-rapid_p="10">Dear Abby</a>
+                </li>
+                <li class="Mb-6 Fz-m Ff-b">
+                    <a href="/comics/" data-ylk="itc:0;tar:news.yahoo.com;ct:naventry;rspns:nav;t1:a2;t2:lnav;t3:st;t4:m-1;sec:lnav;elm:itm;elmt:cat;cpos:11;" data-action-outcome="navigate" data-rapid_p="11">Comics</a>
+                </li>
+                <li class="Mb-6 Fz-m Ff-b">
+                    <a href="/abc-news/" data-ylk="itc:0;tar:news.yahoo.com;ct:naventry;rspns:nav;t1:a2;t2:lnav;t3:st;t4:m-1;sec:lnav;elm:itm;elmt:cat;cpos:12;" data-action-outcome="navigate" data-rapid_p="12">ABC News</a>
+                </li>
+                <li class="Mb-6 Fz-m Ff-b">
+                    <a href="/originals/" data-ylk="itc:0;tar:news.yahoo.com;ct:naventry;rspns:nav;t1:a2;t2:lnav;t3:st;t4:m-1;sec:lnav;elm:itm;elmt:cat;cpos:13;" data-action-outcome="navigate" data-rapid_p="13">Yahoo Originals</a>
+                </li>
+                <li class="Mb-6 Fz-m Ff-b">
+                    <a href="/yahoo_news_photos/" data-ylk="itc:0;tar:news.yahoo.com;ct:naventry;rspns:nav;t1:a2;t2:lnav;t3:st;t4:m-1;sec:lnav;elm:itm;elmt:cat;cpos:14;" data-action-outcome="navigate" data-rapid_p="14">Photos</a>
+                </li>
+        </ul>
+        </div>
+        <div class="col-sm-6">
+        
+        <h1>Lufthansa: Co-pilot disclosed earlier "severe depression"</h1>
+        <p>By <b>DAVID McHUGH and JOAN LOWY</b><br>
+<small>1 hour ago</small></p>
+        </div>
+        
+       <div class="col-sm-3">asdfasdfsd</div>
+    </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
