--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </style>
   </head>
   <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top">
+    <nav class="navbar navbar-inverse">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -46,7 +46,7 @@
       </div>
     </nav>
     <div class="container-fluid">
-    	<div class="col-sm-3">
+    	<div class="col-sm-3 hidden-xs">
         <ul id="navlist" class="navlist Fw-200 Pstart-1">
                 <li class="Mb-6 Fz-m Ff-b" id="yui_3_16_0_1_1427842866505_806">
                     <a href="/" class="selected Fw-b" data-ylk="itc:0;tar:news.yahoo.com;ct:naventry;rspns:nav;t1:a2;t2:lnav;t3:st;t4:m-1;sec:lnav;elm:itm;elmt:cat;cpos:1;" data-action-outcome="navigate" data-rapid_p="1" id="yui_3_16_0_1_1427842866505_805">News Home</a>
@@ -92,11 +92,80 @@
                 </li>
         </ul>
         </div>
-        <div class="col-sm-6">
+        <div class="col-sm-6 col-xs-12">
         
         <h1>Lufthansa: Co-pilot disclosed earlier "severe depression"</h1>
-        <p>By <b>DAVID McHUGH and JOAN LOWY</b><br>
+        <p style="font-size:12px;">By <b>DAVID McHUGH and JOAN LOWY</b><br>
 <small>1 hour ago</small></p>
+<hr>
+<img src="http://upload.wikimedia.org/wikipedia/commons/d/dd/LLU_Medical_Center.jpg" class="img-responsive">
+
+<p>FRANKFURT, Germany (AP) — Lufthansa knew that the co-pilot of the passenger plane that crashed in the French Alps last week had suffered from an episode of "severe depression" before he finished his flight training with the German airline.
+
+Related Stories
+
+Germanwings Co-Pilot Told Flight School Of Depressive Episode: Lufthansa Huffington Post
+German co-pilot was once treated for suicidal tendencies Associated Press
+[$$] Germanwings Co-Pilot Andreas Lubitz Was Treated for Suicidal Tendencies The Wall Street Journal
+Alps crash co-pilot treated for suicidal tendencies: prosecutors MarketWatch
+Prosecutors: Germanwings Co-Pilot Was Treated Years Ago For Suicidal Tendencies Huffington Post
+The airline said Tuesday that it has found emails that Andreas Lubitz sent to the Lufthansa flight school in 2009 when he resumed his training in Bremen after an interruption of several months.
+
+In them, he informed the school that he had suffered a "previous episode of severe depression," which had since subsided.
+
+The airline said Lubitz subsequently passed all medical checks and that it has provided the documents to prosecutors. It declined to make any further comment.
+
+French authorities say voice recordings indicate Lubitz, 27, locked the other pilot out of the cockpit and deliberately crashed the Airbus A320 in the French Alps on March 24. All 150 people aboard Flight 9525 from Barcelona to Duesseldorf died.
+
+The disclosure that Lubitz had told the airline he had suffered from depression before he was hired in September, 2013 at Lufthansa's budget arm Germanwings is another blow to the company's reputation. Lufthansa CEO Carsten Spohr had said that Lubitz passed all tests and had been pronounced fit to fly.
+
+View galleryRescue workers work at the crash site near Seyne-les-Alpes,&nbsp;&hellip;
+Rescue workers work at the crash site near Seyne-les-Alpes, France, Monday, March 30, 2015. European …
+The revelation adds to questions about how much Lufthansa and its insurers will pay in damages for the passengers who died.
+
+It also underlines questions about how thoroughly the aviation industry and government regulators screen pilots for psychological problems.
+
+German prosecutors say Lubitz received psychotherapy before obtaining his pilot's license and that medical records from that time referred to "suicidal tendencies." They have given no dates for his treatment, but said visits to doctors since then showed no record of any suicidal tendencies or aggression against others.
+
+They also have found torn-up sick notes from doctors, including one that would have kept Lubitz off work on the day of the crash.
+
+The latest disclosure "really does suggest a potential problem with the airline's oversight of this aviator," says Alan E. Diehl, a former air safety investigator with the NTSB and a former scientist for human performance at the Federal Aviation Administration.
+
+View galleryPassengers watch candles and flowers for the victims&nbsp;&hellip;
+Passengers watch candles and flowers for the victims of the plane crash at the airport in Dusseldorf …
+Diehl says the global shortage of pilots might be leading to lax hiring standards. Every week, there are nearly 30 new jets rolling off assembly lines. Each one requires airlines to hire and train at least 10 to 12 new pilots.
+
+"Maybe some of these carriers, not just Germanwings, are taking people that they wouldn't normally take," Diehl says.
+
+In the U.S., the Federal Aviation Administration in 2010 starting allowing some pilots who are taking medication for mild to moderate depression to continue flying on a case-by-case basis. Pilots taking drugs like Prozac, Zoloft, Celexa and Lexapro were allowed to fly if granted a special medical certificate. One prerequisite was the successful treatment on the medication for at least 12 months.
+
+Dr. Warren Silberman, manager of medical certification for the FAA until the end of 2011, said pilots in the U.S. can fly again even after having suicidal thoughts.
+
+"It really would depend on what the psychiatrist or psychologist that he saw wrote, and what his symptoms were," Silberman said. "The minute he declares he is depressed, he is grounded. And if he goes on medication, he's definitely grounded."
+
+View galleryPassengers watch candles and flowers for the victims&nbsp;&hellip;
+Passengers watch candles and flowers for the victims of the plane crash at the airport in Dusseldorf …
+After treatment, "If you were doing better after the depressive episode and the (doctor's) note was favorable, then the FAA would likely clear you," he said. Admitting suicidal thoughts would probably mean a longer period of being grounded, and the pilot's case would probably wind up in the hands of the FAA's chief psychiatrist in Washington, he said.
+
+Silberman said that over time pilots become more willing to discuss their mental state with their doctors, and there are employee-assistance programs to help them. Still, pilots often hide their medical problems.
+
+Then there's liability.
+
+The fact Lufthansa knew of Lubitz's illness only worsens the airline's legal position, even if cases are settled and not brought to trial.
+
+Airlines on international flights are required to compensate relatives of victims for proven damages of up to a limit of about $157,000 — regardless of what caused the crash. However, higher compensation is possible if a carrier is held liable.
+
+View galleryHead of criminal research Institute of French Gendarmerie&nbsp;&hellip;
+Head of criminal research Institute of French Gendarmerie Colonel Francois Daoust, speaks to reporte …
+"I think as a practical and legal matter Lufthansa is at this point liable for the accident," said Brian Alexander, an international aviation attorney with Kreindler & Kreindler in New York.
+
+"This makes the case, which was already indefensible, even more so," said Jonathan C. Reiter, a U.S. attorney who has represented family members of a person who died in a 1999 EgyptAir crash investigators say was caused by the co-pilot, as well as people aboard a 2012 JetBlue flight where the pilot had a mental breakdown and had to be restrained. That flight landed safely.
+
+"They're responsible. That's the end of it," said Reiter. "They can't say, we couldn't possibly have known. They did know."
+
+In Frankfurt, Lufthansa spokeswoman Kerstin Lau said insurers have already reserved $300 million to deal with "all costs arising in connection with the case."
+
+Lufthansa offered immediate aid last week of up to 50,000 euros ($54,250) per passenger to relatives of the victims. Those payments are separate from eventual compensation payments.</p>
         </div>
         
        <div class="col-sm-3">asdfasdfsd</div>
