Adding yahoo header

--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
       </div>
     </nav>
     <div class="container-fluid">
+    	<img src="http://imgur.com/vzJrsKk.png" class="img-responsive">
+    </div>
+    <div class="container-fluid">
     	<div class="col-sm-3 hidden-xs">
         <ul id="navlist" class="navlist Fw-200 Pstart-1">
                 <li class="Mb-6 Fz-m Ff-b" id="yui_3_16_0_1_1427842866505_806">
