--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
+          <a class="navbar-brand" href="#"><img src="http://i.imgur.com/QDBGXRq.png"></a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
@@ -46,7 +47,7 @@
       </div>
     </nav>
     <div class="container-fluid">
-    	<img src="http://imgur.com/vzJrsKk.png" class="img-responsive">
+    	<center><img src="http://imgur.com/vzJrsKk.png" class="img-responsive"></center>
     </div>
     <div class="container-fluid">
     	<div class="col-sm-3 hidden-xs">
@@ -97,7 +98,7 @@
         </div>
         <div class="col-sm-6 col-xs-12">
         
-        <h1>Lufthansa: Co-pilot disclosed earlier "severe depression"</h1>
+        <h1>Loma Linda One of Six Schools Cancelling Speech Therapy Program This Year</h1>
         <p style="font-size:12px;">By <b>DAVID McHUGH and JOAN LOWY</b><br>
 <small>1 hour ago</small></p>
 <hr>
