Starting to write article

--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
 	.navbar-inverse .navbar-nav>li>a {
   color: #fff;
 }
+	.navbar-brand {
+		padding: 10px;
+	}
+	h1 {
+	font-size: 28px;
+	}
     </style>
   </head>
   <body>
@@ -104,19 +110,21 @@
 <hr>
 <img src="http://upload.wikimedia.org/wikipedia/commons/d/dd/LLU_Medical_Center.jpg" class="img-responsive">
 
-<p>FRANKFURT, Germany (AP) — Lufthansa knew that the co-pilot of the passenger plane that crashed in the French Alps last week had suffered from an episode of "severe depression" before he finished his flight training with the German airline.
+<p>LOMA LINDA, California, US (AP) — Loma Linda University announced today that they would be one of the six schools on the West Coast which would be cancelling their on-going Speech Therapy and Audiology programs.
 
-In them, he informed the school that he had suffered a "previous episode of severe depression," which had since subsided.
+"It was not an easy decision to make," says university's dean, Roger Hadley, "this program has been a staple at Loma Linda for many years, but our future needs to move in a different medical direction at this time."
 
-The airline said Lubitz subsequently passed all medical checks and that it has provided the documents to prosecutors. It declined to make any further comment.
+As with the other six schools, Loma Linda University would be closing the program to make room for other medical fields. 
 
-French authorities say voice recordings indicate Lubitz, 27, locked the other pilot out of the cockpit and deliberately crashed the Airbus A320 in the French Alps on March 24. All 150 people aboard Flight 9525 from Barcelona to Duesseldorf died.
+The current press releases states that all current students in the program would be required to transfer to a secondary university if they wish to continue studying their program. Lomda Linda staff would be completely available to all students looking to change schools on short notice.
 
 The disclosure that Lubitz had told the airline he had suffered from depression before he was hired in September, 2013 at Lufthansa's budget arm Germanwings is another blow to the company's reputation. Lufthansa CEO Carsten Spohr had said that Lubitz passed all tests and had been pronounced fit to fly.
 
 View galleryRescue workers work at the crash site near Seyne-les-Alpes,&nbsp;&hellip;
 Rescue workers work at the crash site near Seyne-les-Alpes, France, Monday, March 30, 2015. European …
 The revelation adds to questions about how much Lufthansa and its insurers will pay in damages for the passengers who died.
+
+<img src="http://www.trbimg.com/img-53c5a5e0/turbine/la-fi-loma-linda-university-health-unveils-12--002/1050/1050x591" width="200px" style="float:left;">
 
 It also underlines questions about how thoroughly the aviation industry and government regulators screen pilots for psychological problems.
 
