More space and bolding

--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
 <small>1 hour ago</small></p>
 <hr>
 <img src="http://upload.wikimedia.org/wikipedia/commons/d/dd/LLU_Medical_Center.jpg" class="img-responsive">
-
-<p>LOMA LINDA, California, US (AP) — Loma Linda University announced today that they would be one of the six schools on the West Coast which would be cancelling their on-going Speech Therapy and Audiology programs.
+<br><br>
+<p><b>LOMA LINDA, California, US (AP)</b> — Loma Linda University announced today that they would be one of the six schools on the West Coast which would be cancelling their on-going Speech Therapy and Audiology programs.
 <br><br>
 "It was not an easy decision to make," says university's dean, Roger Hadley, "this program has been a staple at Loma Linda for many years, but our future needs to move in a different medical direction at this time."
 <br><br>
