Adding more article

--- a/index.html
+++ b/index.html
@@ -118,57 +118,14 @@ As with the other six schools, Loma Linda University would be closing the progra
 <br><br>
 The current press releases states that all current students in the program would be required to transfer to a secondary university if they wish to continue studying their program. Lomda Linda staff would be completely available to all students looking to change schools on short notice.
 <br><br>
-The disclosure that Lubitz had told the airline he had suffered from depression before he was hired in September, 2013 at Lufthansa's budget arm Germanwings is another blow to the company's reputation. Lufthansa CEO Carsten Spohr had said that Lubitz passed all tests and had been pronounced fit to fly.
+There will be an announcement for all current students going out later today, along with a number of options about how they can move forward from here.
+<br><br>
+This news comes as a big shock after the announcement of a new medical building earlier this year. The school promised a $1.6 billion addition to the medical campus, however it now looks as if this new building is another piece of Loma Linda's "new medical future", which, unfortunately, doesn't seem to have room for Speech Pathology nor Audiology.
 
-View galleryRescue workers work at the crash site near Seyne-les-Alpes,&nbsp;&hellip;
-Rescue workers work at the crash site near Seyne-les-Alpes, France, Monday, March 30, 2015. European …
-The revelation adds to questions about how much Lufthansa and its insurers will pay in damages for the passengers who died.
+<img src="http://www.trbimg.com/img-53c5a5e0/turbine/la-fi-loma-linda-university-health-unveils-12--002/1050/1050x591" width="300px" style="float:right;margin:20px;margin-right:0px;">
 
-<img src="http://www.trbimg.com/img-53c5a5e0/turbine/la-fi-loma-linda-university-health-unveils-12--002/1050/1050x591" width="200px" style="float:left;">
-
-It also underlines questions about how thoroughly the aviation industry and government regulators screen pilots for psychological problems.
-
-German prosecutors say Lubitz received psychotherapy before obtaining his pilot's license and that medical records from that time referred to "suicidal tendencies." They have given no dates for his treatment, but said visits to doctors since then showed no record of any suicidal tendencies or aggression against others.
-
-They also have found torn-up sick notes from doctors, including one that would have kept Lubitz off work on the day of the crash.
-
-The latest disclosure "really does suggest a potential problem with the airline's oversight of this aviator," says Alan E. Diehl, a former air safety investigator with the NTSB and a former scientist for human performance at the Federal Aviation Administration.
-
-View galleryPassengers watch candles and flowers for the victims&nbsp;&hellip;
-Passengers watch candles and flowers for the victims of the plane crash at the airport in Dusseldorf …
-Diehl says the global shortage of pilots might be leading to lax hiring standards. Every week, there are nearly 30 new jets rolling off assembly lines. Each one requires airlines to hire and train at least 10 to 12 new pilots.
-
-"Maybe some of these carriers, not just Germanwings, are taking people that they wouldn't normally take," Diehl says.
-
-In the U.S., the Federal Aviation Administration in 2010 starting allowing some pilots who are taking medication for mild to moderate depression to continue flying on a case-by-case basis. Pilots taking drugs like Prozac, Zoloft, Celexa and Lexapro were allowed to fly if granted a special medical certificate. One prerequisite was the successful treatment on the medication for at least 12 months.
-
-Dr. Warren Silberman, manager of medical certification for the FAA until the end of 2011, said pilots in the U.S. can fly again even after having suicidal thoughts.
-
-"It really would depend on what the psychiatrist or psychologist that he saw wrote, and what his symptoms were," Silberman said. "The minute he declares he is depressed, he is grounded. And if he goes on medication, he's definitely grounded."
-
-View galleryPassengers watch candles and flowers for the victims&nbsp;&hellip;
-Passengers watch candles and flowers for the victims of the plane crash at the airport in Dusseldorf …
-After treatment, "If you were doing better after the depressive episode and the (doctor's) note was favorable, then the FAA would likely clear you," he said. Admitting suicidal thoughts would probably mean a longer period of being grounded, and the pilot's case would probably wind up in the hands of the FAA's chief psychiatrist in Washington, he said.
-
-Silberman said that over time pilots become more willing to discuss their mental state with their doctors, and there are employee-assistance programs to help them. Still, pilots often hide their medical problems.
-
-Then there's liability.
-
-The fact Lufthansa knew of Lubitz's illness only worsens the airline's legal position, even if cases are settled and not brought to trial.
-
-Airlines on international flights are required to compensate relatives of victims for proven damages of up to a limit of about $157,000 — regardless of what caused the crash. However, higher compensation is possible if a carrier is held liable.
-
-View galleryHead of criminal research Institute of French Gendarmerie&nbsp;&hellip;
-Head of criminal research Institute of French Gendarmerie Colonel Francois Daoust, speaks to reporte …
-"I think as a practical and legal matter Lufthansa is at this point liable for the accident," said Brian Alexander, an international aviation attorney with Kreindler & Kreindler in New York.
-
-"This makes the case, which was already indefensible, even more so," said Jonathan C. Reiter, a U.S. attorney who has represented family members of a person who died in a 1999 EgyptAir crash investigators say was caused by the co-pilot, as well as people aboard a 2012 JetBlue flight where the pilot had a mental breakdown and had to be restrained. That flight landed safely.
-
-"They're responsible. That's the end of it," said Reiter. "They can't say, we couldn't possibly have known. They did know."
-
-In Frankfurt, Lufthansa spokeswoman Kerstin Lau said insurers have already reserved $300 million to deal with "all costs arising in connection with the case."
-
-Lufthansa offered immediate aid last week of up to 50,000 euros ($54,250) per passenger to relatives of the victims. Those payments are separate from eventual compensation payments.</p>
+"We may choose to re-introduce these two programs at a later time, but we currently are slimming down our offerings to focus on the more licrative programs," continues Dean Roger Hadley. "We absolutely regret having our current students put into this tough position, but we will be there to give any help necessary to make this move."
+</p>
         </div>
         
        <div class="col-sm-3">asdfasdfsd</div>
