line heights bigger

--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
 	h1 {
 	font-size: 28px;
 	}
+	p 
+{line-height: 22px;}
     </style>
   </head>
   <body>
@@ -123,7 +125,7 @@ There will be an announcement for all current students going out later today, al
 This news comes as a big shock after the announcement of a new medical building earlier this year. The school promised a $1.6 billion addition to the medical campus, however it now looks as if this new building is another piece of Loma Linda's "new medical future", which, unfortunately, doesn't seem to have room for Speech Pathology nor Audiology.
 
 <img src="http://www.trbimg.com/img-53c5a5e0/turbine/la-fi-loma-linda-university-health-unveils-12--002/1050/1050x591" width="300px" style="float:right;margin:20px;margin-right:0px;">
-
+<br><br>
 "We may choose to re-introduce these two programs at a later time, but we currently are slimming down our offerings to focus on the more licrative programs," continues Dean Roger Hadley. "We absolutely regret having our current students put into this tough position, but we will be there to give any help necessary to make this move."
 </p>
         </div>
